Merge AsyncRunner and HttpServerImpl