@@ -2,23 +2,33 @@ package org.glavo.plumo.internal;
 
 import java.io.Closeable;
 import java.io.IOException;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
 import java.net.*;
 import java.nio.channels.Channels;
 import java.nio.channels.ServerSocketChannel;
 import java.nio.channels.SocketChannel;
+import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Supplier;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
 import org.glavo.plumo.HttpHandler;
 import org.glavo.plumo.TempFileManager;
+import org.jetbrains.annotations.NotNull;
 
-public final class HttpServerImpl implements Runnable {
+public final class HttpServerImpl implements Runnable, AutoCloseable {
 
     /**
      * logger to log to.
      */
     public static final Logger LOG = Logger.getLogger(HttpServerImpl.class.getName());
+
+    private final ReentrantLock lock = new ReentrantLock();
+    private volatile boolean closed = false;
 
     final Closeable ss;
 
@@ -26,20 +36,110 @@ public final class HttpServerImpl implements Runnable {
     final Supplier<TempFileManager> tempFileManagerFactory;
     final int timeout;
 
-    /**
-     * Pluggable strategy for asynchronously executing requests.
-     */
-    private final AsyncRunner asyncRunner;
+    private final Executor executor;
+    private final boolean shutdownExecutor;
+
+    private volatile ClientHandler firstHandle, lastHandle;
 
     public HttpServerImpl(Closeable ss,
                           HttpHandler httpHandler, Supplier<TempFileManager> tempFileManagerFactory,
-                          int timeout,
-                          AsyncRunner asyncRunner) {
+                          Executor executor, boolean shutdownExecutor,
+                          int timeout) {
         this.ss = ss;
         this.httpHandler = httpHandler;
         this.tempFileManagerFactory = tempFileManagerFactory;
         this.timeout = timeout;
-        this.asyncRunner = asyncRunner;
+
+        if (executor == null) {
+            this.executor = VirtualThreadExecutor.AVAILABLE ? new VirtualThreadExecutor() : new DefaultExecutor();
+            this.shutdownExecutor = false;
+        } else {
+            this.executor = executor;
+            this.shutdownExecutor = shutdownExecutor;
+        }
+    }
+
+    void close(ClientHandler handler) {
+        lock.lock();
+        try {
+            if (closed) {
+                return;
+            }
+
+            ClientHandler next = handler.next;
+            ClientHandler prev = handler.prev;
+
+            if (prev == null) {
+                firstHandle = next;
+            } else {
+                prev.next = next;
+                handler.prev = null;
+            }
+
+            if (next == null) {
+                lastHandle = prev;
+            } else {
+                next.prev = prev;
+                handler.next = null;
+            }
+        } finally {
+            lock.unlock();
+            handler.closeSocket();
+        }
+    }
+
+    void exec(ClientHandler handler) {
+        lock.lock();
+        try {
+            if (closed) {
+                throw new IllegalStateException("Runner is closed");
+            }
+
+            ClientHandler last = this.lastHandle;
+
+            if (last == null) {
+                firstHandle = handler;
+            } else {
+                last.next = handler;
+                handler.prev = last;
+            }
+
+            lastHandle = handler;
+        } finally {
+            lock.unlock();
+        }
+
+        executor.execute(handler);
+    }
+
+    @Override
+    public void close() {
+        lock.lock();
+        try {
+            if (closed) {
+                return;
+            }
+
+            closed = true;
+
+            ClientHandler handler = firstHandle;
+
+            while (handler != null) {
+                handler.closeSocket();
+                handler = handler.next;
+            }
+
+            firstHandle = null;
+            lastHandle = null;
+
+            if (shutdownExecutor) {
+                ((ExecutorService) executor).shutdown();
+            }
+
+            IOUtils.safeClose(this.ss);
+        } finally {
+            lock.unlock();
+        }
     }
 
     @Override
@@ -52,7 +152,7 @@ public final class HttpServerImpl implements Runnable {
                     if (timeout > 0) {
                         finalAccept.setSoTimeout(timeout);
                     }
-                    asyncRunner.exec(new ClientHandler(this, asyncRunner,
+                    exec(new ClientHandler(this,
                             finalAccept.getLocalAddress(),
                             finalAccept.getInputStream(), finalAccept.getOutputStream(),
                             finalAccept));
@@ -66,7 +166,7 @@ public final class HttpServerImpl implements Runnable {
             do {
                 try {
                     final SocketChannel finalAccept = serverSocketChannel.accept();
-                    asyncRunner.exec(new ClientHandler(this, asyncRunner,
+                    exec(new ClientHandler(this,
                             InetAddress.getLoopbackAddress(),
                             Channels.newInputStream(finalAccept),
                             Channels.newOutputStream(finalAccept),
@@ -78,15 +178,70 @@ public final class HttpServerImpl implements Runnable {
         }
     }
 
-    /**
-     * Stop the server.
-     */
-    public void stop() {
-        try {
-            IOUtils.safeClose(this.ss);
-            this.asyncRunner.close();
-        } catch (Exception e) {
-            HttpServerImpl.LOG.log(Level.SEVERE, "Could not stop all connections", e);
+    private static final class DefaultExecutor implements Executor {
+        private long requestCount;
+
+        @Override
+        public void execute(@NotNull Runnable command) {
+            Thread t = new Thread(command, "Plumo Request Processor (#" + this.requestCount++ + ")");
+            t.setDaemon(true);
+            t.start();
+        }
+    }
+
+    private static final class VirtualThreadExecutor implements Executor {
+        static final boolean AVAILABLE;
+        static final boolean NEED_ENABLE_PREVIEW;
+
+        private static final MethodHandle newThread;
+
+        static {
+            boolean available = false;
+            boolean needEnablePreview = false;
+            MethodHandle newThreadHandle = null;
+
+            try {
+                Class<?> vtBuilder = Class.forName("java.lang.Thread$Builder$OfVirtual");
+
+                MethodHandles.Lookup lookup = MethodHandles.publicLookup();
+                Object factory = lookup.findStatic(Thread.class, "ofVirtual", MethodType.methodType(vtBuilder)).invoke();
+
+                newThreadHandle = lookup.findVirtual(vtBuilder, "unstarted", MethodType.methodType(Thread.class, Runnable.class))
+                        .bindTo(factory);
+
+                available = true;
+            } catch (UnsupportedOperationException ignored) {
+                needEnablePreview = true;
+            } catch (Throwable ignored) {
+            }
+
+            AVAILABLE = available;
+            NEED_ENABLE_PREVIEW = needEnablePreview;
+            newThread = newThreadHandle;
+        }
+
+        public static void checkAvailable() {
+            if (!AVAILABLE) {
+                throw new UnsupportedOperationException(NEED_ENABLE_PREVIEW
+                        ? "Preview Features not enabled, need to run with --enable-preview"
+                        : "Please upgrade to Java 19+");
+            }
+        }
+
+        private long requestCount;
+
+        public VirtualThreadExecutor() {
+        }
+
+        @Override
+        public void execute(@NotNull Runnable command) {
+            try {
+                Thread t = (Thread) newThread.invokeExact(command);
+                t.setName("Plumo Request Processor (#" + this.requestCount++ + ")");
+                t.start();
+            } catch (Throwable e) {
+                throw new InternalError(e);
+            }
         }
     }
 }
